@@ -79,3 +79,14 @@ embedded ``batou`` command and batou will install itself and run your command:
     Pre-installing batou - this can take a while...
     ...
 
+Using packages
+--------------
+
+batou can install additional dependencies when bootstrapping itself. This is
+useful for example to share component code between multiple deployments. If you
+place a ``requirements.txt`` file in your project's top-level directory (i.e.,
+next to the ``batou`` script), these requirements will be installed along with
+batou. (See the `pip documentation`_ for details on the file format. Note for
+example that you can not only name thirdparty packages but also local paths.)
+
+.. _`pip documentation`: http://www.pip-installer.org/en/latest/logic.html#requirements-file-format
